# metall-debpkg

./: .gitlab-ci.yml  CMakeLists.txt
.github/workflows/: ci-test.yml
cmake/: fetch_boost.cmake  metall.pc.in
debian/: changelog  control  libmetall-dev.install  libmetall-doc.doc-base.api  libmetall-doc.install  rules  watch
debian/patches/: add-a-pkg-config-install-file.patch  series
docs/: Doxyfile.in
docs/readthedocs/advanced_build/: cmake.md
example/cmake/FetchContent/: README.md
include/metall/: stl_allocator.hpp  version.hpp
scripts/: test_kernel.sh
scripts/CI/: run_ci_build_and_test.sh
scripts/release_test/: run_intensive_test.sh  run_release_tests.sh
src/: CMakeLists.txt
